Fixed bug #71891 (header_register_callback() and register_shutdown_function())

Actually, this fixed the memleak not the behavior(it is expected
behavior that "shutdown" is not outputed)